tests/unit/errors/test7.js
// If sin llave final
if(true){
	console.log(1);
